--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -164,7 +164,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXw-4D-zYC" customClass="MaterialButton" customModule="ToDoList" customModuleProvider="target">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zXw-4D-zYC">
                                         <rect key="frame" x="280" y="-17" width="30" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="C6j-Me-o7b"/>
@@ -307,10 +307,10 @@
             </objects>
             <point key="canvasLocation" x="2193.75" y="0.0"/>
         </scene>
-        <!--Material Navigation Controller-->
+        <!--Custom Material Navigation-->
         <scene sceneID="SN6-zS-SEj">
             <objects>
-                <navigationController id="HN7-Gq-NcF" customClass="MaterialNavigationController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController id="HN7-Gq-NcF" customClass="CustomMaterialNavigation" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KYj-6U-17E">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -377,7 +377,7 @@
         <!--Splash View Controller-->
         <scene sceneID="ejo-WC-Pr0">
             <objects>
-                <viewController id="PXR-IY-KUZ" customClass="SplashViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SplashVC" id="PXR-IY-KUZ" customClass="SplashViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AMO-bQ-Zsm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
