--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -84,7 +84,7 @@
                                 <action selector="didTapSignOut:" destination="EjC-1Q-Cv9" id="Xrl-zc-liN"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="TlS-9X-YX1">
+                        <barButtonItem key="rightBarButtonItem" title="+" id="TlS-9X-YX1">
                             <connections>
                                 <segue destination="P6n-J6-B55" kind="show" identifier="AddTask" id="Aup-uW-lsk"/>
                             </connections>
@@ -105,7 +105,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="FqI-4F-rWv">
-                                <rect key="frame" x="0.0" y="104" width="320" height="464"/>
+                                <rect key="frame" x="0.0" y="164" width="320" height="404"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
@@ -121,7 +121,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g5i-o9-bZY">
-                                <rect key="frame" x="0.0" y="64" width="320" height="40"/>
+                                <rect key="frame" x="0.0" y="124" width="320" height="40"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remind" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fio-xH-vIc">
                                         <rect key="frame" x="10" y="8" width="67" height="24"/>
@@ -147,7 +147,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jys-5c-cEk" userLabel="DateView">
-                                <rect key="frame" x="0.0" y="104" width="320" height="0.0"/>
+                                <rect key="frame" x="0.0" y="164" width="320" height="0.0"/>
                                 <subviews>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due Date:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGc-PH-zNC">
                                         <rect key="frame" x="10" y="-12" width="86.5" height="24"/>
@@ -197,7 +197,7 @@
                             <constraint firstItem="g5i-o9-bZY" firstAttribute="trailing" secondItem="t1b-FU-oCf" secondAttribute="trailing" id="Pwf-C1-BNK"/>
                             <constraint firstItem="t1b-FU-oCf" firstAttribute="trailing" secondItem="Q1a-jK-e17" secondAttribute="trailing" id="XbH-Jh-BSZ"/>
                             <constraint firstItem="t1b-FU-oCf" firstAttribute="bottom" secondItem="Q1a-jK-e17" secondAttribute="bottom" id="cfn-VU-fex"/>
-                            <constraint firstItem="g5i-o9-bZY" firstAttribute="top" secondItem="t1b-FU-oCf" secondAttribute="top" id="dF4-ek-DyR"/>
+                            <constraint firstItem="g5i-o9-bZY" firstAttribute="top" secondItem="t1b-FU-oCf" secondAttribute="top" constant="60" id="dF4-ek-DyR"/>
                             <constraint firstItem="FqI-4F-rWv" firstAttribute="top" secondItem="Jys-5c-cEk" secondAttribute="bottom" id="g0I-0k-bq9"/>
                             <constraint firstItem="FqI-4F-rWv" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="mht-i9-7kP"/>
                             <constraint firstItem="Jys-5c-cEk" firstAttribute="leading" secondItem="t1b-FU-oCf" secondAttribute="leading" id="rYz-ds-oVR"/>
@@ -206,12 +206,12 @@
                         <viewLayoutGuide key="safeArea" id="t1b-FU-oCf"/>
                     </view>
                     <navigationItem key="navigationItem" title="Add Task" id="LlM-mt-i70">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="2IQ-j0-3QS">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="2IQ-j0-3QS">
                             <connections>
                                 <action selector="cancel" destination="P6n-J6-B55" id="l2i-HM-dHQ"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="Xun-gD-7mp">
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="Xun-gD-7mp">
                             <connections>
                                 <action selector="done" destination="P6n-J6-B55" id="Ay9-3z-ZtS"/>
                             </connections>
@@ -256,10 +256,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JfK-Ce-JJC">
-                                <rect key="frame" x="10" y="258" width="320" height="300"/>
+                                <rect key="frame" x="10" y="258" width="300" height="300"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NKV-22-KiT" customClass="ButtonWithBorder" customModule="ToDoList" customModuleProvider="target">
-                                        <rect key="frame" x="160" y="267" width="160" height="33"/>
+                                        <rect key="frame" x="150" y="267" width="150" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="CANCEL"/>
                                         <connections>
@@ -267,7 +267,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ouv-rb-em3" customClass="ButtonWithBorder" customModule="ToDoList" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="267" width="160" height="33"/>
+                                        <rect key="frame" x="0.0" y="267" width="150" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="OK"/>
                                         <connections>
@@ -275,7 +275,7 @@
                                         </connections>
                                     </button>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="w7z-mQ-ILy">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="267"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="267"/>
                                         <date key="date" timeIntervalSinceReferenceDate="575908444.07147098">
                                             <!--2019-04-02 14:34:04 +0000-->
                                         </date>
@@ -317,10 +317,10 @@
             </objects>
             <point key="canvasLocation" x="2193.75" y="0.0"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Custom Material Navigation-->
         <scene sceneID="SN6-zS-SEj">
             <objects>
-                <navigationController id="HN7-Gq-NcF" sceneMemberID="viewController">
+                <navigationController id="HN7-Gq-NcF" customClass="CustomMaterialNavigation" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KYj-6U-17E">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -336,7 +336,7 @@
         <!--Splash View Controller-->
         <scene sceneID="ejo-WC-Pr0">
             <objects>
-                <viewController id="PXR-IY-KUZ" customClass="SplashViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SplashVC" id="PXR-IY-KUZ" customClass="SplashViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AMO-bQ-Zsm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
