--- a/ToDoList/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/ToDoList/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lPD-hV-daZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="748" y="0.0"/>
+            <point key="canvasLocation" x="555" y="-91"/>
         </scene>
         <!--To Do List-->
         <scene sceneID="39H-aT-WzA">
@@ -155,7 +155,7 @@
                     <navigationItem key="navigationItem" title="To Do List" id="iWL-3B-hAu" userLabel="To Do List">
                         <barButtonItem key="leftBarButtonItem" title="Log out" id="Ynk-Il-aKp">
                             <connections>
-                                <action selector="didTapSignOut:" destination="EjC-1Q-Cv9" id="YtC-fu-f7J"/>
+                                <action selector="didTapSignOut:" destination="ZlC-Sh-hem" id="mil-aN-iWl"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -315,7 +315,7 @@
                                 <rect key="frame" x="10" y="284" width="300" height="274"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ouv-rb-em3" customClass="MaterialButton" customModule="ToDoList" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="236" width="135" height="33"/>
+                                        <rect key="frame" x="10" y="231" width="135" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="OK"/>
                                         <connections>
@@ -323,14 +323,14 @@
                                         </connections>
                                     </button>
                                     <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="w7z-mQ-ILy">
-                                        <rect key="frame" x="0.0" y="10" width="300" height="221"/>
+                                        <rect key="frame" x="0.0" y="10" width="300" height="216"/>
                                         <color key="backgroundColor" red="0.87843137250000003" green="0.94901960780000005" blue="0.94509803920000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <date key="date" timeIntervalSinceReferenceDate="575908444.07147098">
                                             <!--2019-04-02 14:34:04 +0000-->
                                         </date>
                                     </datePicker>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NKV-22-KiT" customClass="MaterialButton" customModule="ToDoList" customModuleProvider="target">
-                                        <rect key="frame" x="155" y="236" width="135" height="33"/>
+                                        <rect key="frame" x="155" y="231" width="135" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <state key="normal" title="CANCEL"/>
                                         <connections>
@@ -343,13 +343,13 @@
                                     <constraint firstItem="w7z-mQ-ILy" firstAttribute="top" secondItem="JfK-Ce-JJC" secondAttribute="top" constant="10" id="4NY-Y9-B3j"/>
                                     <constraint firstItem="NKV-22-KiT" firstAttribute="top" secondItem="w7z-mQ-ILy" secondAttribute="bottom" constant="5" id="C9W-Zq-A23"/>
                                     <constraint firstAttribute="trailing" secondItem="w7z-mQ-ILy" secondAttribute="trailing" id="CYP-0F-zXb"/>
-                                    <constraint firstAttribute="bottom" secondItem="NKV-22-KiT" secondAttribute="bottom" constant="5" id="IXU-7a-wwL"/>
+                                    <constraint firstAttribute="bottom" secondItem="NKV-22-KiT" secondAttribute="bottom" constant="10" id="IXU-7a-wwL"/>
                                     <constraint firstItem="NKV-22-KiT" firstAttribute="leading" secondItem="ouv-rb-em3" secondAttribute="trailing" constant="10" id="JDd-EL-owl"/>
                                     <constraint firstItem="NKV-22-KiT" firstAttribute="top" secondItem="w7z-mQ-ILy" secondAttribute="bottom" constant="5" id="KL8-q6-I4K"/>
                                     <constraint firstItem="ouv-rb-em3" firstAttribute="top" secondItem="w7z-mQ-ILy" secondAttribute="bottom" constant="5" id="LM3-Ye-gkj"/>
                                     <constraint firstItem="ouv-rb-em3" firstAttribute="width" secondItem="JfK-Ce-JJC" secondAttribute="width" multiplier="0.5" constant="-15" id="SOp-Ld-ILZ"/>
                                     <constraint firstItem="ouv-rb-em3" firstAttribute="leading" secondItem="JfK-Ce-JJC" secondAttribute="leading" constant="10" id="YwH-Ao-8ch"/>
-                                    <constraint firstAttribute="bottom" secondItem="ouv-rb-em3" secondAttribute="bottom" constant="5" id="cSz-dy-zof"/>
+                                    <constraint firstAttribute="bottom" secondItem="ouv-rb-em3" secondAttribute="bottom" constant="10" id="cSz-dy-zof"/>
                                     <constraint firstItem="w7z-mQ-ILy" firstAttribute="leading" secondItem="JfK-Ce-JJC" secondAttribute="leading" id="p0t-U4-yua"/>
                                     <constraint firstAttribute="trailing" secondItem="NKV-22-KiT" secondAttribute="trailing" constant="10" id="vQD-UA-QQn"/>
                                     <constraint firstItem="NKV-22-KiT" firstAttribute="width" secondItem="ouv-rb-em3" secondAttribute="width" id="wMH-oD-SDi"/>
@@ -358,11 +358,11 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.1953392551369863" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="emj-NJ-hVo" firstAttribute="trailing" secondItem="JfK-Ce-JJC" secondAttribute="trailing" constant="10" id="7Z1-qS-KYs"/>
+                            <constraint firstItem="emj-NJ-hVo" firstAttribute="bottom" secondItem="JfK-Ce-JJC" secondAttribute="bottom" constant="10" id="KSe-n9-AUv"/>
                             <constraint firstItem="JfK-Ce-JJC" firstAttribute="width" secondItem="WLL-4c-Zuf" secondAttribute="width" constant="-20" id="S8V-jw-eQ7"/>
-                            <constraint firstAttribute="trailing" secondItem="JfK-Ce-JJC" secondAttribute="trailing" constant="10" id="d4v-89-Mlu"/>
                             <constraint firstItem="JfK-Ce-JJC" firstAttribute="height" secondItem="WLL-4c-Zuf" secondAttribute="height" multiplier="0.5" constant="-10" id="eIx-Pm-w8X"/>
                             <constraint firstItem="JfK-Ce-JJC" firstAttribute="leading" secondItem="emj-NJ-hVo" secondAttribute="leading" constant="10" id="rUs-ax-17o"/>
-                            <constraint firstAttribute="bottom" secondItem="JfK-Ce-JJC" secondAttribute="bottom" constant="10" id="rp1-41-qAx"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="emj-NJ-hVo"/>
                     </view>
@@ -428,6 +428,6 @@
         <image name="Uncheck" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fI2-Fy-xg5"/>
+        <segue reference="oFN-IG-kRA"/>
     </inferredMetricsTieBreakers>
 </document>
